--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -2,15 +2,21 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form method="POST">
+        <form method="post">
             {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Reset Password</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Request Password Reset</button>
+            
+            <div>
+                <label class="reset" for="username">Your Username:</label>
+                <input class="reset" type="username" id="username" name="username" required>
             </div>
+            <div>
+                <label class="reset" for="password">New Password: </label>
+                <input class="reset" type="password" id="password" name="password" required>
+            </div>
+            <button class="btn btn-outline-info" type="submit">Request Code to Password Reset</button>
         </form>
     </div>
 {% endblock content %}
+
+
+
