--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -2,15 +2,17 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form method="POST">
+        <form method="post">
             {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Reset Password</legend>
-                {{ form|crispy }}
-            </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Reset Password</button>
+                <label class="reset" for="username">Username:</label>
+                <input class="reset" type="username" id="username" name="username" required>
             </div>
+            <div>
+                <label class="reset" for="code">Enter Code:</label>
+                <input class="reset" type="code" id="code" name="code" required>
+            </div>
+            <button class="btn btn-outline-info" type="submit">Reset Password</button>
         </form>
     </div>
 {% endblock content %}
