--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,6 +1,11 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <div class="alert alert-info">
-        An email has been sent with instructions to reset your password
+        A Code has been set to your Webex Enter it within 1 minute
+    </div>
+    <div>
+        <small class="text-muted">
+            Enter Code <a class="ml-2" href="{% url 'password_reset_confirm' %}">Reset Password?</a>
+        </small>
     </div>
 {% endblock content %}
