--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -7,6 +7,21 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
+label.reset{
+  padding: 10px;
+  float: left;
+  margin-right: 15px;
+}
+
+input.reset {
+  padding: 10px;
+  margin-bottom: 16px;
+  margin-left: 15px;
+  margin-right: 15px;
+  border: 1px solid #ddd;
+  border-radius: 14px;
+  float: center;
+}
 
 .select_option {
     padding: 10px;
@@ -237,16 +252,3 @@ alert-link{color:#062c33}.alert-error{
 hr{
   border-top-color:#ffe8a1
 }.alert-error
-
-
-button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
